<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:minWidth="250dp"
        android:padding="10dp">

        <LinearLayout
            android:id="@+id/lua_setting_hr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#080808"
                android:text="热重载端口："
                android:textSize="20sp" />

            <EditText
                android:id="@+id/hr_use_port"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="8172"
                android:inputType="numberDecimal"
                android:textSize="20sp"
                android:textColor="#080808" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lua_setting_serial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#080808"
                android:text="手机序列号："
                android:textSize="20sp" />

            <EditText
                android:id="@+id/hr_serial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="unknown"
                android:textSize="20sp"
                android:textColor="#080808" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lua_setting_debug"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/debug_ip"
                    android:textColor="#080808" />

                <EditText
                    android:id="@+id/etDebugIp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:minWidth="120dp"
                    android:textColor="#080808" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/debug_port"
                    android:textColor="#080808" />

                <EditText
                    android:id="@+id/edDebugPort"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:textSize="20sp"
                    android:textColor="#080808" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/debug_tip"
                    android:textColor="#080808" />

                <Switch
                    android:id="@+id/swDebug"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:textColor="#080808"
                    android:textOff="@string/debug_close"
                    android:textOn="@string/debug_open" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/log_tip"
                    android:textColor="#080808" />
                <Button
                    android:id="@+id/btn_start_log"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_log_tip"
                    android:layout_marginLeft="5dp"/>

                <Button
                    android:id="@+id/btn_finish_log"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/finish_log_tip"
                    android:layout_marginLeft="5dp"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="10dp">

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="取消" />'

            <Button
                android:id="@+id/btn_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="确认" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>